Remove code for "fixing auto zoom" and add geenral overflow prevention and non-scalable.

--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 /* Base Styles */
 body {
   margin: 40px auto;
   max-width: 650px;
-  font-size: clamp(16px, 4vw, 20px);
+  font-size: 20px;
   line-height: 1.65;
   font-family: "Times New Roman", Times, serif;
   color: #2b2b2b; 
@@ -194,6 +199,8 @@ blockquote {
     width: 100%;
     padding: 0 16px;
     line-height: 1.6;
+    font-size: clamp(16px, 4vw, 20px);
+
   }
 
   h1 {
